--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>Welcome to Greece</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="./vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Custom fonts for this template -->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" />
+    <link href="./vendor/fontawesome-free/css/all.min.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css?family=Varela+Round"
       rel="stylesheet"
@@ -26,15 +26,18 @@
     />
 
     <!-- Custom styles for this template -->
-    <link href="css/grayscale.min.css" rel="stylesheet" />
+    <link href="./css/grayscale.css" rel="stylesheet" />
   </head>
 
   <body id="page-top">
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top"
-          >The Land of the Gods</a
+        <a
+          class="navbar-brand js-scroll-trigger"
+          href="#page-top"
+          style="color: white; font-size: 25px; font-weight: 600"
+          >Land of the Gods</a
         >
         <button
           class="navbar-toggler navbar-toggler-right"
@@ -45,13 +48,12 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          Menu
           <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+              <a class="nav-link js-scroll-trigger" href="#masthead">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#projects"
@@ -67,40 +69,24 @@
     </nav>
 
     <!-- Header -->
-    <header class="masthead">
+    <header id="masthead" class="masthead">
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
-          <h1 class="mx-auto my-0 text-uppercase">Grayscale</h1>
-          <h2 class="text-white-50 mx-auto mt-2 mb-5">
-            A free, responsive, one page Bootstrap theme created by Start
-            Bootstrap.
+          <h1 style=" color: #ffffff"" class="mx-auto my-0 text-uppercase">Greece</h1>
+          <h2 style="z-index:100; color: #ffffff; font-family: Varela" class="text-white-50mx-auto mt-2 mb-5">
+            Greece (Greek: Ελλάδα), officially the Hellenic Republic (Greek:
+            Ελληνική Δημοκρατία), historically also known as Hellas (Greek:
+            Ελλάς).
           </h2>
-          <a href="#about" class="btn btn-primary js-scroll-trigger"
-            >Get Started</a
+          <a
+            href="#projects"
+            style="background-color: rgba();"
+            class="btn btn-primary js-scroll-trigger"
+            >Learn More</a
           >
         </div>
       </div>
     </header>
-
-    <!-- About Section -->
-    <section id="about" class="about-section text-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-            <p class="text-white-50">
-              Grayscale is a free Bootstrap theme created by Start Bootstrap. It
-              can be yours right now, simply download the template on
-              <a href="http://startbootstrap.com/template-overviews/grayscale/"
-                >the preview page</a
-              >. The theme is open source, and you can use it for any purpose,
-              personal or commercial.
-            </p>
-          </div>
-        </div>
-        <img src="img/ipad.png" class="img-fluid" alt="" />
-      </div>
-    </section>
 
     <!-- Projects Section -->
     <section id="projects" class="projects-section bg-light">
@@ -110,7 +96,7 @@
           <div class="col-xl-8 col-lg-7">
             <img
               class="img-fluid mb-3 mb-lg-0"
-              src="img/bg-masthead.jpg"
+              src="./img/bg-masthead.jpg"
               alt=""
             />
           </div>
@@ -118,9 +104,7 @@
             <div class="featured-text text-center text-lg-left">
               <h4>Shoreline</h4>
               <p class="text-black-50 mb-0">
-                Grayscale is open source and MIT licensed. This means you can
-                use it for any project - even commercial projects! Download it,
-                customize it, and publish your website!
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.assa pellena. In tempus in massa quis interdum. Vivamus porttitor risus sem,celerisque aliquam
               </p>
             </div>
           </div>
@@ -129,7 +113,7 @@
         <!-- Project One Row -->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/demo-image-01.jpg" alt="" />
+            <img class="img-fluid" src="./img/demo-image-01.jpg" alt="" />
           </div>
           <div class="col-lg-6">
             <div class="bg-black text-center h-100 project">
@@ -139,8 +123,7 @@
                 >
                   <h4 class="text-white">Misty</h4>
                   <p class="mb-0 text-white-50">
-                    An example of where you can put an image of a project, or
-                    anything else, along with a description.
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.assa pellena. In tempus in massa quis interdum. Vivamus porttitor risus sem,celerisque aliquam
                   </p>
                   <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
@@ -152,7 +135,7 @@
         <!-- Project Two Row -->
         <div class="row justify-content-center no-gutters">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/demo-image-02.jpg" alt="" />
+            <img class="img-fluid" src="./img/demo-image-02.jpg" alt="" />
           </div>
           <div class="col-lg-6 order-lg-first">
             <div class="bg-black text-center h-100 project">
@@ -162,9 +145,7 @@
                 >
                   <h4 class="text-white">Mountains</h4>
                   <p class="mb-0 text-white-50">
-                    Another example of a project with its respective
-                    description. These sections work well responsively as well,
-                    try this theme on a small screen!
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.assa pellena. In tempus in massa quis interdum. Vivamus porttitor risus sem,celerisque aliquam
                   </p>
                   <hr class="d-none d-lg-block mb-0 mr-0" />
                 </div>
@@ -179,21 +160,11 @@
     <section id="signup" class="signup-section">
       <div class="container">
         <div class="row">
-          <div class="col-md-10 col-lg-8 mx-auto text-center">
-            <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-            <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
-
-            <form class="form-inline d-flex">
-              <input
-                type="email"
-                class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0"
-                id="inputEmail"
-                placeholder="Enter email address..."
-              />
-              <button type="submit" class="btn btn-primary mx-auto">
-                Subscribe
-              </button>
-            </form>
+          <div class="col-sm-0 col-lg-4 mx-auto text-center">
+              <a href="mailto:akourtisdev@gmail.com">
+                <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
+                ><h2 class="text-white mb-5">Contact us!</h2></button
+              ></a>
           </div>
         </div>
       </div>
@@ -202,18 +173,18 @@
     <!-- Footer -->
     <footer class="bg-black small text-center text-white-50">
       <div class="container">
-        Copyright &copy; greecepagehaec 2019
+        Copyright &copy; Principles of Marketing 2019
       </div>
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="./vendor/jquery/jquery.min.js"></script>
+    <script src="./vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="./vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/grayscale.min.js"></script>
+    <script src="./js/grayscale.min.js"></script>
   </body>
 </html>
