--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"> 
+
     <title>Welcome to Greece</title>
 
     <!-- Bootstrap core CSS -->
