--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"> 
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"> 
 
     <title>Welcome to Greece</title>
 
@@ -38,7 +38,7 @@
         <a
           class="navbar-brand js-scroll-trigger"
           href="#page-top"
-          style="color: white; font-size: 25px; font-weight: 600"
+          style=" font-size: 25px; font-weight: 600"
           >Land of the Gods</a
         >
         <button
