--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a
           class="navbar-brand js-scroll-trigger"
           href="#page-top"
-          style=" font-size: 25px; font-weight: 600"
+          style="font-family: Varela; font-size: 25px; font-weight: 600"
           >Land of the Gods</a
         >
         <button
@@ -165,7 +165,7 @@
           <div class="col-sm-0 col-lg-4 mx-auto text-center">
               <a href="mailto:akourtisdev@gmail.com">
                 <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                ><h2 class="text-white mb-5">Contact us!</h2></button
+                <h2 class="text-white mb-5">Contact us!</h2></button
               ></a>
           </div>
         </div>
